--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,15 +16,14 @@ jobs:
         with:
           python-version: '3.11' # 第二步：安装 Python 环境
 
-#      - name: Install Chinese Fonts (Full Support)
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install -y fonts-wqy-microhei fonts-wqy-zenhei xfonts-wqy
+      - name: Install Chinese Fonts (Full Support)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y fonts-wqy-microhei fonts-wqy-zenhei xfonts-wqy
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt # 第三步：装包
-          # 如果你有 playwright 记得在这里加 playwright install
+          pip install -r requirements.txt
 
       - name: Run my script
         env:
